@@ -1357,17 +1357,7 @@ int FileList::ProcessKey(const Manager::Key& Key)
 					}
 
 					if (!strFileName.empty() && (Global->Opt->QuotedName&QUOTEDNAME_INSERT) != 0)
-					{
-						auto last_char = strFileName.back();
 						QuoteSpace(strFileName);
-						if (L'"' == strFileName.back() && IsSlash(last_char))
-						{/* "Path Name\" --> "Path Name"\ */
-							strFileName.pop_back();
-							strFileName.pop_back();
-							strFileName.push_back(L'"');
-							strFileName.push_back(last_char);
-						}
-					}
 
 					strFileName += L" ";
 				}
