@@ -1,4 +1,9 @@
-﻿w17 27.01.2016 23:06:51 +0300 - build 4522
+﻿w17 29.01.2016 16:55:57 +0300 - build 4523
+
+1. Продолжение 4521.
+   Теперь "D:\Path Name"\ глобальная фича - так работает QuoteSpace().
+
+w17 27.01.2016 23:06:51 +0300 - build 4522
 
 1. Экспериментально: кастомизация языковых файлов без редактирования генерируемых 'родных' файлов .lng
 
